Fix collapsing menu for iOS, shorter weather caching

--- a/css/style.css
+++ b/css/style.css
@@ -503,3 +503,9 @@ div.spacer {
 .weatherforecast-small {
 	height:150px;
 }
+
+.mensa-table h3 a {
+	width: 100%;
+	color: #fff;
+	text-decoration: none;
+}
